[package]
name = "docker-build"
version = "0.1.0"
authors = ["Ryota Ozaki <ozaki.ryota@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
bollard = "0.9"
futures-util = "0.3.4"
tar = "0.4"
